# Asio_Socket

./: .gitignore  README.md
asio_learn/: CMakeLists.txt
asio_learn/Iasyn_server/: CMakeLists.txt  SocketSendQueue.hpp  server.cpp
asio_learn/sync_server/: server1.cpp
asio_learn_client/: CMakeLists.txt
asio_learn_client/Iasyn_client/: CMakeLists.txt  client.cpp
asio_learn_client/sync_client/: CMakeLists.txt  client1.cpp
asio_learn_server/: CMakeLists.txt
asio_learn_server/Iasyn_server/: CMakeLists.txt  Communication.cpp  Communication.hpp  CommunicationFactory.hpp  Request.cpp  Request.hpp  SharedPointer.hpp  SocketCommunication.cpp  SocketCommunication.hpp  SocketCommunicationFactory.cpp  SocketCommunicationFactory.hpp  SocketCommunicationTest.cpp  SocketRequest.cpp  SocketRequest.hpp  SocketSendQueue.cpp  SocketSendQueue.hpp  conncetionInfo.hpp  connectionInfo.cpp  connectionInfo.hpp  getIpAddress.hpp  server.cpp  server.hpp
asio_learn_server/Iasyn_server/utils/: assertion.hpp  print.hpp  readme.md
asio_learn_server/sync_server/: CMakeLists.txt  server1  server1.cpp
fileOperate/: uuid  uuid.cpp
socket/: client  client.cpp  client1  client1.cpp  client2  client2.cpp  demo3  demo4  demo4.cpp  getIpAddrByNetworkName  getIpAddrByNetworkName.cpp  mul-server  mul-server.cpp  mul-server1.cpp  server  server.cpp  server1  server2
